# coursework_5

./: .gitignore  README.md  draft.py  main.py  pyproject.toml
Classes/: DBCreator.py  dbcreator.py  dbmanager.py
Utils/: connection_config.py  format_vacancies_data.py  get_vacancies_data.py  user_interface.py
